fix(protocol-designer): allow scroll when NewFileModal too tall (#1777)
- fix bug where Overlay of NewFileModal didn't make it to the bottom of the window

Closes #1776

--- a/protocol-designer/src/components/modals/NewFileModal/NewFileModal.css
+++ b/protocol-designer/src/components/modals/NewFileModal/NewFileModal.css
@@ -21,6 +21,10 @@
 
 .new_file_modal {
   line-height: 1.5;
+  min-height: 100%;
+
+  /* override default modal top/bottom to allow scroll */
+  bottom: auto;
 
   & form > * {
     margin-bottom: 1rem;
